<resources>
    <string name="app_name">Книжный магазин</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Корзина</string>
    <string name="title_products">Продукты</string>
    <string name="title_product_details">Информация о товаре</string>
    <string name="title_checkout_form">Оформление заказа</string>
    <string name="title_checkout_success">Заказ оформлен</string>
    <string name="fragment_catalog_iv_status_description">Статус загрузки списка категорий</string>
    <string name="loading_status">Идет загрузка</string>
    <string name="loading_error_status">Произошла ошибка при загрузке</string>
    <string name="list_item_product_thumbnail_description">Миниатюра</string>
    <string name="template_price">%1$.2f &#8381;</string>
    <string name="fragment_product_detail_tv_descr_title">Описание</string>
    <string name="fragment_product_detail_iv_image_descr">Фотография продукта</string>
    <string name="add_to_cart">В корзину</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="phone">Телефон</string>
    <string name="checkout_buyer_block_title">Покупатель</string>
    <string name="checkout_payment_block_title">Оплата</string>
    <string name="checkout_payment_cash">Наличными</string>
    <string name="checkout_payment_card">Банковской картой</string>
    <string name="checkout_total_title">Сумма к оплате</string>
    <string name="checkout_total_goods">Товары</string>
    <string name="checkout_total_discount">Скидка</string>
    <string name="checkout_total_sum">Итого</string>
    <string name="checkout_do_checkout_btn">Оформить заказ</string>
    <string name="template_quantity">%1$d шт.</string>
    <string name="cart_do_checkout_text">Перейти к оформлению : %1$.2f &#8381;</string>
    <string name="cart_item_remove_btn_text">Удалить</string>
    <string name="cart_item_price_for_one">%1$.2f &#8381; / шт.</string>
    <string name="fragment_cart_fragment_item_removed_msg">Продукт %1$s был удален из корзины</string>
    <string name="field_can_not_be_empty_error">Поле не может быть пустым</string>
    <string name="field_contains_invalid_characters_error">Поле должно содержать только буквы</string>
    <string name="your_order_number">Номер вашего заказа</string>
    <string name="phone_must_contains_eleven_numbers">Телефон должен содержать ровно 11 цифр</string>
    <string name="product_share_link">http://yuferov.edu/product/%1$d</string>
    <string name="sharing_not_available">Функция \"Поделиться\" нелоступна на данном устройстве</string>
    <string name="cart_empty">Корзина пуста</string>
</resources>
